syntax = "proto3";
package types;

import "google/protobuf/timestamp.proto";

option go_package = "./protobuf";

message Person {
	string name = 1;
	int32 id = 2;
	string email = 3;

	enum PhoneType {
		MOBILE = 0;
		HOME = 1;
		WORK = 3;
	}

	message PhoneNumber {
		string number = 1;
		PhoneType type = 2;
	}

	repeated PhoneNumber phones = 4;

	google.protobuf.Timestamp last_updated = 5;
}

message AddressBook {
	repeated Person people = 1;
}

service AddressBookService {
	rpc GetPerson(GetPersonRequest) returns (GetPersonResponse) {}
}

message GetPersonRequest {
	int32 id = 1;
}

message GetPersonResponse {
	Person person = 1;
}
